# widget-cookiecutter

./: .gitignore  MANIFEST.in  README.md  cookiecutter.json  setup.py
.github/workflows/: main.yml
ipywidgetexample/: __init__.py  example.py
js/: README.md  package.json  webpack.config.js
js/src/: embed.js  extension.js  index.js  jupyter-widget-example.js
tests/: testconfig.yml
{{cookiecutter.github_project_name}}/: .gitignore  MANIFEST.in  README.md  RELEASE.md  install.json  setup.cfg  setup.py  {{cookiecutter.npm_package_name}}.json
{{cookiecutter.github_project_name}}/js/: .npmignore  README.md  amd-public-path.js  package.json  webpack.config.js
{{cookiecutter.github_project_name}}/js/lib/: example.js  extension-jupyterlab.js  extension.js  index.js  labplugin.js
{{cookiecutter.github_project_name}}/js/src/: embed.js  example.js  extension.js  index.js
{{cookiecutter.github_project_name}}/{{cookiecutter.python_package_name}}/: __init__.py  _version.py  example.py
