[metadata]
name = {{ cookiecutter.python_package_name  }}
author = {{ cookiecutter.author_name }}
author_email={{ cookiecutter.author_email }}
version = attr: {{ cookiecutter.python_package_name  }}._version.__version__
description = {{ cookiecutter.project_short_description }}
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/{{ cookiecutter.github_organization_name  }}/{{ cookiecutter.github_project_name }}
keywords = ipython, widgets, Jupyter, JupyterLab, JupyterLab3
license = BSD 3-Clause License
classifiers =
    Development Status :: 4 - Beta
    Framework :: IPython
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Framework :: Jupyter

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    ipywidgets>=7.6.0
python_requires = >=3.6
